--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,40 @@
-# Node
+# Node.js
 node_modules/
 npm-debug.log
 yarn-debug.log
 yarn-error.log
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
+# React Native
+.expo/
+.env
+.metro-health-check*
+*.jsbundle
+
+# Testing
+__tests__/coverage/
+coverage/
 
 # Android
 android/.gradle/
 android/app/build/
 android/.idea/
-*.iml
+.gradle
+.cxx/
+local.properties
+*.hprof
 *.apk
-
-# macOS system files
-.DS_Store
-
-# JetBrains
-.idea/
-#*.iml
-
-# VS Code
-.vscode/
-
-# React Native
-.expo/
-.env
+*.aab
 *.keystore
+!debug.keystore
+.kotlin/
 
-# Other cache
-__tests__/coverage/
-coverage/
-
-
-# OSX
-#
-.DS_Store
-
-# Xcode
-#
+# iOS / Xcode
 build/
 *.pbxuser
 !default.pbxuser
@@ -54,55 +52,19 @@ DerivedData
 *.ipa
 *.xcuserstate
 **/.xcode.env.local
+**/Pods/
+/vendor/bundle/
 
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
+# IDE
+.idea/
+.vscode/
 *.iml
-*.hprof
-.cxx/
-*.keystore
-!debug.keystore
-.kotlin/
 
-# node.js
-#
-../node_modules/
-npm-debug.log
-yarn-error.log
+# macOS
+.DS_Store
 
-# fastlane
-#
-# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
-# screenshots whenever they are needed.
-# For more information about the recommended setup visit:
-# https://docs.fastlane.tools/best-practices/source-control/
-
+# Fastlane
 **/fastlane/report.xml
 **/fastlane/Preview.html
 **/fastlane/screenshots
 **/fastlane/test_output
-
-# Bundle artifact
-*.jsbundle
-
-# Ruby / CocoaPods
-**/Pods/
-/vendor/bundle/
-
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
-
-# testing
-/coverage
-
-# Yarn
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/sdks
-!.yarn/versions
